--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,31 +5,35 @@ events {
 http {
   server_tokens off;
   server {
-    listen 80;
-    root  /var/www;
+    listen 8085;
+#    root  /var/www;
+
+#    location / {
+#     index index.html;
+#    }
+
 
     location / {
-      index index.html;
+      proxy_set_header    Host                localhost;
+      proxy_set_header    X-Real-IP           $remote_addr;
+      proxy_set_header    X-Forwarded-Host    localhost;
+      proxy_set_header    X-Forwarded-Server  localhost;
+      proxy_set_header    X-Forwarded-Proto   $scheme;
+      proxy_set_header    X-Forwarded-For     $remote_addr;
+      proxy_redirect off;
+      proxy_connect_timeout 90s;
+      proxy_read_timeout 90s;
+      proxy_send_timeout 90s;
+      proxy_pass http://front:8080/;
     }
 
-    # Media: images, icons, video, audio, HTC
-    location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
-      expires 1d;
-      access_log off;
-      add_header Cache-Control "public";
-    }
 
-    # CSS and Javascript
-    location ~* \.(?:css|js)$ {
-      expires 1d;
-      access_log off;
-      add_header Cache-Control "public";
-    }
 
     location /api/ {
       proxy_set_header X-Forwarded-For $remote_addr;
       proxy_set_header Host            $http_host;
       proxy_pass http://goservice:8080/;
     }
+
   }
 }
